# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
diff/scripts/: gendiff.py  parser_cl.py
gendiff/: __init__.py  gendiff.py  parser.py
tests/: test_gendiff.py
tests/fixtures/: __init__.py  file1.yaml  file2.json  file_fixture.py  result.txt
