[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Nickolay Berezhencev <nickolay200112@gmail.com>"]
readme = "README.md"
packages = [
    {include = "diff"}
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "diff.scripts.gendiff:main"
