[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Nickolay Berezhencev <nickolay200112@gmail.com>"]
readme = "README.md"
packages = [
    {include = "gendiff"}
]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"


[tool.poetry.group.development.dependencies]
pytest = "^8.1.1"
flake8 = "^7.0.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "gendiff.gendiff:main"
